@@ -1,9 +1,12 @@
 package com.osscameroon.jsgenerator.cli.internal;
 
+import com.osscameroon.jsgenerator.cli.BuiltinVariableNameStrategy;
 import com.osscameroon.jsgenerator.cli.Command;
-import com.osscameroon.jsgenerator.cli.OutputFilenameResolver;
 import com.osscameroon.jsgenerator.cli.Valid;
+import com.osscameroon.jsgenerator.core.Configuration;
 import com.osscameroon.jsgenerator.core.Converter;
+import com.osscameroon.jsgenerator.core.OutputStreamResolver;
+import com.osscameroon.jsgenerator.core.VariableDeclaration;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import picocli.CommandLine;
@@ -17,31 +20,27 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-import static com.osscameroon.jsgenerator.cli.OutputFilenameResolver.*;
+import static com.osscameroon.jsgenerator.cli.BuiltinVariableNameStrategy.TYPE_BASED;
+import static com.osscameroon.jsgenerator.core.OutputStreamResolver.*;
 import static java.lang.String.format;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static java.util.stream.Collectors.toList;
-
-/**
- * CommandDefault
- *
- * @author Salathiel @t salathiel@genese.name
- * @since Sep 04, 2022 @t 21:45:35
- */
 
 @Data
 @RequiredArgsConstructor
 @CommandLine.Command(
-    name = "jsgenerator",
-    version = "0.0.1-SNAPSHOT",
-    mixinStandardHelpOptions = true,
-    description = "Translating files, stdin or inline from HTML to JS")
+        name = "jsgenerator",
+        version = "0.0.1-SNAPSHOT",
+        mixinStandardHelpOptions = true,
+        description = "Translating files, stdin or inline from HTML to JS")
 public class CommandDefault implements Command, Valid {
-    private final OutputFilenameResolver inlineFilenameResolver;
-    private final OutputFilenameResolver stdinFilenameResolver;
-    private final OutputFilenameResolver pathFilenameResolver;
+    private final OutputStreamResolver inlineFilenameResolver;
+    private final OutputStreamResolver stdinFilenameResolver;
+    private final OutputStreamResolver pathFilenameResolver;
     private final Converter converter;
 
+    //TODO:show options for variable declarations, test what we get based on user choice let const or var
+    @Option(names = {"-k", "--keyword"}, description = "variable declaration keyword")
+    private VariableDeclaration variableDeclaration = VariableDeclaration.LET;
     @Option(names = {"-t", "--tty"}, description = "output to stdin, not files")
     private boolean tty;
 
@@ -49,28 +48,40 @@ public class CommandDefault implements Command, Valid {
     private List<Path> paths = new ArrayList<>();
 
     @Option(
-        arity = "1..*", names = {"-i", "--inline"}, description = "args as HTML content, not files")
+            arity = "1..*", names = {"-i", "--inline"}, description = "args as HTML content, not files")
     private List<String> inlineContents = new ArrayList<>();
 
     @Option(names = {"-e", "--ext"}, defaultValue = ".jsgenerator.js", description = "output files' extension")
     private String extension = ".jsgenerator.js";
 
     @Option(
-        names = "--stdin-pattern",
-        defaultValue = "stdin{{ extension }}",
-        description = "pattern for stdin output filenames")
+            names = {"-s", "--selector"},
+            defaultValue = ":root > body",
+            description = "Target element selector")
+    private String targetElementSelector = ":root > body";
+
+    @Option(
+            names = "--stdin-pattern",
+            defaultValue = "stdin{{ extension }}",
+            description = "pattern for stdin output filenames")
     private String stdinPattern = format("stdin{{ %s }}", EXTENSION);
 
     @Option(
-        names = "--path-pattern",
-        defaultValue = "{{ original }}{{ extension }}",
-        description = "pattern for path-based output filenames")
+            names = "--path-pattern",
+            defaultValue = "{{ original }}{{ extension }}",
+            description = "pattern for path-based output filenames")
     private String pathPattern = format("{{ %s }}{{ %s }}", ORIGINAL, EXTENSION);
 
     @Option(
-        names = "--inline-pattern",
-        defaultValue = "inline.{{ index }}{{ extension }}",
-        description = "Pattern for inline output filename")
+            names = "--variable-name-generation-strategy",
+            defaultValue = "TYPE_BASED",
+            description = "Variable names generation strategy")
+    private BuiltinVariableNameStrategy builtinVariableNameStrategy = TYPE_BASED;
+
+    @Option(
+            names = "--inline-pattern",
+            defaultValue = "inline.{{ index }}{{ extension }}",
+            description = "Pattern for inline output filename")
     private String inlinePattern = format("inline.{{ %s }}{{ %s }}", INDEX, EXTENSION);
 
     @Override
@@ -89,8 +100,8 @@ public class CommandDefault implements Command, Valid {
         if (0 < builder.length()) {
             System.err.println("\fTranslating [stdin]: <<");
             converter.convert(
-                new ByteArrayInputStream(builder.toString().getBytes(UTF_8)),
-                outputStream = resolveStdinOutputStream());
+                    new ByteArrayInputStream(builder.toString().getBytes(UTF_8)),
+                    outputStream = resolveStdinOutputStream());
             outputStream.flush();
         }
 
@@ -99,18 +110,19 @@ public class CommandDefault implements Command, Valid {
             if (0 < inlineContents.get(i).length()) {
                 System.err.printf("\fTranslating [inline]: %d%n", i);
                 converter.convert(
-                    new ByteArrayInputStream(inlineContents.get(i).getBytes(UTF_8)),
-                    outputStream = resolveInlineOutputStream(i));
+                        new ByteArrayInputStream(inlineContents.get(i).getBytes(UTF_8)),
+                        outputStream = resolveInlineOutputStream(i));
                 outputStream.flush();
             }
         }
 
         // NOTE: Process paths
-        for (final var path : paths.stream().map(Path::toAbsolutePath).distinct().collect(toList())) {
+        for (final var path : paths.stream().map(Path::toAbsolutePath).distinct().toList()) {
             System.err.printf("\fTranslating: %s%n", path);
             converter.convert(
-                Files.newInputStream(path),
-                outputStream = resolvePathOutputStream(path));
+                    Files.newInputStream(path),
+                    outputStream = resolvePathOutputStream(path),
+                    new Configuration(targetElementSelector, variableDeclaration, builtinVariableNameStrategy.get()));
             outputStream.flush();
             outputStream.close();
         }
@@ -131,8 +143,8 @@ public class CommandDefault implements Command, Valid {
         if (tty) return System.out;
 
         final var outputPathname = pathFilenameResolver.resolve(pathPattern, Map.of(
-            EXTENSION, extension,
-            INDEX, index
+                EXTENSION, extension,
+                INDEX, index
         ));
         final var outputPath = Path.of(outputPathname);
 
@@ -144,12 +156,12 @@ public class CommandDefault implements Command, Valid {
 
         final var nameCount = path.getNameCount();
         final var outputPathname = pathFilenameResolver.resolve(pathPattern, Map.of(
-            ORIGINAL_EXTENSION, path.getName(nameCount - 1).toString()
-                .replace("^.*\\.(.*)$", "$1"),
-            ORIGINAL_DIRECTORY, path.getName(nameCount - 2).toString(),
-            ORIGINAL_BASENAME, path.getName(nameCount - 1).toString(),
-            ORIGINAL, path.toString(),
-            EXTENSION, extension
+                ORIGINAL_EXTENSION, path.getName(nameCount - 1).toString()
+                        .replace("^.*\\.(.*)$", "$1"),
+                ORIGINAL_DIRECTORY, path.getName(nameCount - 2).toString(),
+                ORIGINAL_BASENAME, path.getName(nameCount - 1).toString(),
+                ORIGINAL, path.toString(),
+                EXTENSION, extension
         ));
         final var outputPath = Path.of(outputPathname);
 
